# baraza-protocol

./: .env.example  .gitattributes  .gitignore  .gitmodules  .vercelignore  AFRICADAO_RESEARCH.md  AGENTS.md  ANTHROPIC_FORM_FINAL.md  AUDIENCE_RESEARCH.md  AUDIT.md  Anchor.toml  BARAZA_BRAND_BOOK.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMUNITY_RESEARCH.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  IMPLEMENTATION.md  LICENSE  NOTICE  PRD.md  PRODUCT.md  README.md  RESEARCH.md  SECURITY.md  TODOS.md  baraza.code-workspace  index.html  next.config.js  package-lock.json  package.json  payouts.py  proxy.ts  push-baraza.bat  styles.css  tsconfig.json  vercel.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
Project Stellar/: claude_artifact_all_sections.json  claude_artifact_snapshot.md  claude_kpi_snapshot.md  claude_revenue_snapshot.md  claude_risks_snapshot.md  claude_roadmap_snapshot.md  claude_technical_snapshot.md
Project Title/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
api/: README.md
app/: .editorconfig  .env.example  .env.local.example  .gitignore  README.md  error.tsx  eslint.config.js  globals.css  index.html  layout.tsx  not-found.tsx  package-lock.json  package.json  page.tsx  postcss.config.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
baraza-protocol/: .env.example  .mcp.json  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
contracts/: README.md
docs/: AVALANCHE_GRANTS_REVIEW.md  CLAUDE_CONTEXT_PROMPT.md  DEVNET_DEPLOYMENT.md  KNOWLEDGE_GRAPH.md  MOTION_SYSTEM.md  MULTI_REPO_STRATEGY.md  OPEN_TASKS_RESEARCH_UPDATE.md  PRICING.md  PROTOCOL_STATUS_2026-06-07.md  PULL_PROMPT.md  README.md  RESEARCH_FLAGS_2026-07-02.md  SOLANA_DEVNET_DEPLOYMENT.md  TESTNET_CONTRACT_API_REVIEW.md  TOKENOMICS_AUDIT_REPORT.md  (+3 more)
programs/community_registry/: Cargo.toml
programs/community_registry/src/: lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/membership/: Cargo.toml
programs/membership/src/: lib.rs
programs/payment_attestation/: Cargo.toml
programs/payment_attestation/src/: lib.rs
programs/treasury_vault/: Cargo.toml
programs/treasury_vault/src/: lib.rs
(+744 files in other folders)
