[package]
name = "community_registry"
version = "0.1.0"
description = "Baraza community registry program (community identity + admin authority)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "community_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
