[package]
name = "membership"
version = "0.1.0"
description = "Baraza membership program (tiers, member accounts, lifecycle)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membership"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
payment_attestation = { path = "../payment_attestation", features = ["cpi"] }
