[package]
name = "payment_attestation"
version = "0.1.0"
description = "Baraza payment attestation program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
